# augmento

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.txt  pipeline.cpp  todo.txt
benchmarks/: CMakeLists.txt  README.md  bench.md  benchmark.cpp  benchmark.md  benchmark_sweep.py  config_template.json  plot_results.py  requirements.txt  run_sweep.py
benchmarks/results/: benchmark_results.csv
benchmarks/src/: benchmark.cpp
benchmarks/test/: config_template.json
examples/: config_example1.json  config_example2.json  example.json  example.json.bak
examples/json/: example1.json
include/: factory.hpp  image.hpp  json.hpp  manipulations.hpp  multithread.hpp  operation.hpp  pipeline.hpp  session_manager.hpp  thread_controller.hpp
src/: a.out  factory.cpp  image.cpp  json.cpp  main.cpp  manipulations.cpp  multithread.cpp  operation.cpp  pipeline.cpp  session_manager.cpp  thread_controller.cpp
